<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Nome -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <!-- Idade -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idade"/>

    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <!-- Sexo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"/>

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

    </RadioGroup>

    <!-- País -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:text="@string/pais"/>

    <Spinner
        android:id="@+id/spPaises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Idiomas que domina -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:text="@string/idiomas_domina"/>

    <CheckBox
        android:id="@+id/cbPortugues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portugues"/>

    <CheckBox
        android:text="@string/ingles"
        android:id="@+id/cbIngles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cbEspanhol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/espanhol"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Botão "Validar" -->
        <!-- layout_weight define o peso de cada componente -->
        <!-- Como ambos os botões estão com peso 1, estão dividindo a tela em 2 tamanhos iguais -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/validar"
            android:onClick="validar"/>

        <!-- Botão "Enviar" -->
        <!-- layout_weight define o peso de cada componente -->
        <!-- Como ambos os botões estão com peso 1, estão dividindo a tela em 2 tamanhos iguais -->
        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enviar"
            android:onClick="enviar"/>

    </LinearLayout>

</LinearLayout>