<LinearLayout 
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Nome -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNome"
        android:layout_marginBottom="10dp"/>

    <!-- Idade -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idade"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvIdade"
        android:layout_marginBottom="10dp"/>

    <!-- Sexo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"/>

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <!-- País -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pais"/>

    <TextView
        android:id="@+id/tvPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>


    <!-- Idiomas que domina -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idiomas_domina"/>

    <TextView
        android:id="@+id/tvIdiomasQueDomina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <!-- Voltar -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="voltar"
        android:text="@string/voltar"/>

</LinearLayout>